# presentation_skill

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: clickable_overlays.md  prd.md  rfc.md  test.md  working.md
scripts/: presentation-skill
skills/: generated_assets.md  reference.md  reveal_decks.md  skill_presentation.md  speaker_notes.md
src/presentation_skill/: __init__.py  asset_prep.py  cli.py  deck_plan.py  export_pdf.py  planner.py  starter.py
src/presentation_skill/templates/bootstrap/: DECK_README.md
src/presentation_skill/templates/common/: requirements.txt  start-server.py
src/presentation_skill/templates/common/css/: custom.css
src/presentation_skill/templates/examples/html/: index.html  visual_guideline.md
src/presentation_skill/templates/examples/html/js/: deck.js
src/presentation_skill/templates/examples/html/js/slides/: interactive-check.js  slide1.js  slide2.js  slide4.js  slide5.js  slide6.js  title.js
src/presentation_skill/templates/examples/image/: index.html  outline_visual.md
src/presentation_skill/templates/examples/image/tools/: generate_slides.py  openai_generate_image.py
src/presentation_skill/templates/html/: index.html
src/presentation_skill/templates/html/js/slides/: slide3.js
src/presentation_skill/templates/image/: index.html
tests/: test_asset_prep.py  test_cli.py  test_deck_plan.py  test_export_pdf.py  test_planner.py  test_public_contract.py
