[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "presentation-skill"
version = "0.1.0"
description = "Public AI-agent skill for image-generated and Reveal.js presentation decks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "grapeot" }]
dependencies = []

[project.optional-dependencies]
pdf = ["img2pdf>=0.5", "pypdf>=4.0"]
assets = ["Pillow>=10.0"]
dev = ["pytest>=8.0", "img2pdf>=0.5", "pypdf>=4.0", "Pillow>=10.0"]

[project.scripts]
presentation-skill = "presentation_skill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
